[project]
name = "agent-pinboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "networkx>=3.4",
    "pydantic>=2.13.0",
]

[project.optional-dependencies]
langfuse = [
    "langfuse>=3",
]
ws = [
    "websockets>=13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.4.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_pinboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
